fix: tweak post content heading spacing

--- a/assets/css/extended/global.css
+++ b/assets/css/extended/global.css
@@ -25,3 +25,7 @@ html:has(.layout--extrawide) {
 main:has(.layout--extrawide) {
     max-width: calc(var(--nav-width) + var(--gap) * 2);
 }
+
+.post-content h2 {
+    margin-top: 62px;
+}
